css/main.css
/* ... */
.contact-three-bg {
    width: 43%;
}

@media screen and (max-width: 1199px) {
    .contact-three-bg {
        width: 100%;
        position: static !important;
        height: 600px !important;
    }
}

.contact-three-nice-select::after {
    width: 12px;
    height: 12px;
    right: 32px;
}

.contact-four-area {
    margin-block-start: -460px;
}

@media screen and (max-width: 767px) {
    .contact-four-area {
        margin-block-start: -50px;
    }
}

.contact-four-wrapper {
    background: #ffff;
}

@media screen and (max-width: 767px) {
    .contact-four-wrapper {
        padding-inline: 20px;
    }

    .tw-pb-9 {
        padding-block-end: 20px;
    }

    .tw-pt-17 {
        padding-block-start: 20px;
    }

    .tw-pe-13 {
        padding-inline-end: 20px;
    }

    .tw-ps-11 {
        padding-inline-start: 20px;
    }

    .tw-rounded-3xl {
        border-radius: 1.5rem;
        padding: 20px;
    }
}

.contact-four-wrapper .tp-shop-quantity {
    padding: 20px 23px;
}

.counding-four-wrapper::before {
    content: "";
    position: absolute;
    width: 100%;
    height: 1px;
    inset-block-end: 18px;
    inset-inline-start: 0;
    background-color: #d9d9d9;
    z-index: -1;
}

.counding-four-title {
    font-size: 180px;
}

@media screen and (max-width: 991px) {
    .counding-four-title {
        font-size: 100px;
        text-align: center;
    }
}

@media screen and (max-width: 575px) {
    .counding-four-title {
        font-size: 70px;
    }
}

.gallery-ip-wrapper .experience-thumb img {
    border: none;
}

.gallery-ip-wrapper .experience-content-inner {
    width: 220px;
}

.appointment-ip-wrapper {
    padding-block: 80px 50px;
    padding-inline: 70px;
}

.appointment-ip-wrapper .contact-three-input {
    background: #f7f7ee;
}

.appointment-ip-wrapper .contact-three-nice-select {
    background: #f7f7ee !important;
}

.room-details-arrow-box button {
    position: absolute;
    width: 60px;
    height: 60px;
    top: 50%;
    left: 30px;
    font-size: 24px;
    background-color: hsl(var(--white));
    color: var(--black);
    border-radius: 50%;
    transform: translateY(-50%);
    transition: all 0.3s ease 0s;
    z-index: 1;
}

.room-details-arrow-box button.slider-next {
    left: auto;
    right: 30px;
}

.room-details-arrow-box button {
    transition: 0.4s;
}

.room-details-arrow-box button:hover {
    background: var(--neutral-800);
}

@media screen and (max-width: 767px) {
    .room-details-title {
        font-size: 56px;
    }
}

.room-details-accordion-item {
    background: hsl(var(--white));
    margin-block-end: 20px;
    border: none;
    padding-inline: 22px;
}

.room-details-accordion-button {
    background: hsl(var(--white));
    font-family: var(--heading-font);
    font-weight: 400;
    font-size: 20px;
    padding-block-start: 24px;
    padding-block-end: 24px;
    border-radius: 0;
}

.room-details-accordion-button::after {
    width: 30px;
    height: 30px;
    content: "+";
    font-size: 20px;
    background-image: none;
    font-weight: 600;
    transition: 0.4s;
    position: absolute;
    right: 10px;
    top: 50%;
    transform: translateY(-50%);
    line-height: 1;
    display: inline-flex;
    align-items: center;
    justify-content: center;
    border: 1px solid rgba(29, 29, 29, 0.1);
    border-radius: 50%;
}

.room-details-accordion-button:not(.collapsed) {
    background: hsl(var(--white));
    box-shadow: none !important;
}

.room-details-accordion-button:not(.collapsed)::after {
    content: "-";
    transform: translateY(-50%);
    font-size: 26px;
    background-image: none;
    transition: 0.4s;
    background: var(--neutral-800);
    border: 1px solid var(--neutral-800);
    color: var(--white);
}

.room-details-accordion-button:focus {
    box-shadow: none !important;
    border: none;
}

.room-details-accordion-body {
    background-color: hsl(var(--white));
    padding-block-start: 0;
    padding-block-end: 40px;
    padding-inline-end: 100px;
}

.room-details-accordion-body p {
    color: #83827f;
    line-height: 175%;
    font-weight: 400;
    font-family: var(--heading-font);
}

.room-details-client-review-thumb {
    max-width: 80px;
    width: 100%;
    height: 80px;
}

.room-details-sideber .checkout-wrapper:first-child {
    padding-inline-start: 12px;
    padding-inline-end: 8px;
}

.room-details-sideber .checkout-wrapper:last-child {
    padding-inline-end: 8px;
}

.room-details-sideber .tp-shop-quantity {
    padding: 15px 23px;
}

@media screen and (max-width: 1199px) {
    .destination-details-wrapper {
        margin-block-end: 30px;
    }
}

.destination-details-list ul li {
    list-style: disc;
}

.destination-details-list ul li::marker {
    color: var(--neutral-800);
    font-size: 20px;
}

@media screen and (max-width: 1199px) {
    .destination-details-sideber {
        margin-inline-start: 0;
    }
}

.pricing-area {
    padding-block-start: 260px;
    padding-block-end: 160px;
    clip-path: circle(80% at bottom);
}

.pricing-area::before {
    content: "";
    position: absolute;
    width: 100%;
    height: 98%;
    inset-block-end: 0;
    inset-inline-start: 0;
    background: #f1ece5;
    z-index: -1;
    clip-path: circle(80% at bottom);
}



@media screen and (max-width: 575px) {
    .pricing-wrapper {
        padding: 70px 20px 46px 20px;
    }
}

@media screen and (max-width: 991px) {
    .pricing-wrap {
        flex-wrap: wrap;
    }
}

@media screen and (max-width: 991px) {
    .pricing-respon {
        width: 100%;
    }
}

.pricing-item {
    max-width: 624px;
    width: 100%;
    border-bottom: 1px dashed hsl(var(--heading-color));
    padding-inline-start: 14px;
    padding-inline-end: 14px;
    transition: 0.4s ease-in-out;
    position: relative;
    z-index: 1;
}

@media screen and (max-width: 1199px) {
    .pricing-item {
        max-width: 400px;
    }
}

@media screen and (max-width: 991px) {
    .pricing-item {
        max-width: 100%;
    }
}
/* ... */

